# MochiDiffusion

./: .gitignore  .gitmodules  .swift-format  .swiftlint.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Info.plist  LICENSE  MochiDiffusionInfo.plist  README.ko.md  README.md  README.zh-Hans.md  README.zh.md  SwiftUI-Migrating-from-the-observable-object-protocol-to-the-observable-macro.md  crowdin.yml  de.strings  fi.strings  it.strings  ja.strings  nb.strings  nl.strings  ru.strings  sv.strings  uk.strings  zh-Hans.strings  zh-Hant.strings
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.sparkle/: appcast.xml
Casks/: mochi-diffusion.rb
Diffusion/: Diffusion.entitlements  Downloader.swift
Diffusion.xcodeproj/: project.pbxproj
DiffusionTests/: DiffusionTests.swift
DiffusionUITests/: DiffusionUITests.swift  DiffusionUITestsLaunchTests.swift
Mochi Diffusion/: App.entitlements  App.swift  Downloader.swift  Flux2c-BridgingHeader.h  Iris-BridgingHeader.h  MochiDiffusionApp.swift
Mochi Diffusion Tests/: Mochi_DiffusionTests.swift
Mochi Diffusion UITests/: Mochi_DiffusionUITests.swift  Mochi_DiffusionUITestsLaunchTests.swift
Mochi Diffusion.xcodeproj/: project.pbxproj
conversion/: download-script.sh  pyproject.toml
de.lproj/: InfoPlist.strings  Localizable.strings
en.lproj/: Localizable.stringsdict
es.lproj/: InfoPlist.strings  Localizable.strings
fi.lproj/: InfoPlist.strings  Localizable.strings
flux2c_shims/: flux.h  flux_compat.c  flux_img2img_with_embeddings.c  flux_img2img_with_embeddings.h
fr.lproj/: InfoPlist.strings  (+1 more)
(+205 files in other folders)
