[project]
name = "mochi-model-conversion"
version = "0.1"
requires-python = ">=3.8,<3.9"
dependencies = [
    "torch<=2.3.0",
    "diffusers<=0.24.0",
    "python-coreml-stable-diffusion",
    "scikit-learn<=1.1.2",
]

[tool.uv.sources]
python-coreml-stable-diffusion = { git = "https://github.com/apple/ml-stable-diffusion.git" }
